Adicionando botões para facilitar a navegação do usuario entre as rotas quando necessario, adcionando url dinamicas no html e no codigo python, adicionando autenticação e autorização.

--- a/templates/lista.html
+++ b/templates/lista.html
@@ -19,5 +19,7 @@
                 
             </tbody>
         </table>
-        
+        {% if session['usuario_logado'] %}
+        <a class="btn btn-primary btn-sm ml-2" href="{{ url_for('new_game') }}">Adicionar novo jogo</a>
+    {% endif %}
 {% endblock %}
