--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,24 @@
 
   <body>
     <div class="container">
+
+      {% with messages = get_flashed_messages() %}
+        {% if messages %} 
+          <ul id="messages" class="list-unstyled">
+          {% for message in messages %}
+            {% if message == 'Senha ou usuário inválidos!' %}
+              <li class="alert alert-danger">{{ message }}</li>
+            {% else %}
+              <li class="alert alert-success">{{ message }}</li>
+            {% endif %}
+          {% endfor %}
+          </ul>
+        {% endif %}
+      {% endwith %}
+
       <h1>{{title}}</h1>
-      <form method="POST" action="/autenticar">
+      <form method="POST" action="{{ url_for('autenticar') }}">
+        <input type="hidden" name="next" value="{{next}}">
         <p>
           <label>Nome de usuário:</label>
           <input class="form-control" type="text" name="usuario" required />
