--- a/templates/novo_jogo.html
+++ b/templates/novo_jogo.html
@@ -1,6 +1,6 @@
 {% extends "template.html" %}
 {% block content %}
-      <form action="/create" method="post">
+      <form action="{{ url_for('create_game') }}" method="post">
         <fieldset>
           <div class="form-group">
             <label for="nome">Nome</label>
